--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,77 +1,85 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Roboto';
-  font-weight: 500;
-  background-color: #b3b8cd;
-  font-family: Montserrat, sans-serif;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-
-  min-height: 100vh;
+p {
+  padding: 0;
   margin: 0;
 }
-
 .profile {
-  background-color: #383449;
+  font-family: 'Roboto', sans-serif;
+  color: #f6f9f9;
+  background-color: #004c9390;
   border-radius: 5px;
   box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
-  color: #b3b8cd;
   padding-top: 30px;
   position: relative;
   width: 350px;
   max-width: 100%;
   text-align: center;
   height: 350px;
+  overflow: hidden;
 }
 
 .avatar {
-  margin: 0 auto;
+  margin: 0 auto 25px;
   display: block;
   width: 30%;
   height: auto;
   border-radius: 50%;
-  border: 1px solid #03bfcb;
+  border: 1px solid #f6f9f9;
   padding: 7px;
 }
 
 .name {
-  font-family: 'Roboto';
+  color: #ffffff;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 24px;
   line-height: 1.19;
+  margin-bottom: 15px;
 }
 
 .tag {
-  font-family: 'Roboto';
+  color: #f0f0f0bb;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 16px;
+  margin-bottom: 15px;
 }
 
 .location {
-  font-family: 'Roboto';
+  color: #f0f0f0bb;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 16px;
 }
 
 .stats {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
-  font-family: 'Roboto';
   font-weight: 500;
   list-style-type: none;
   font-size: 12px;
   padding-left: 0px;
-
   margin-bottom: 0;
+  margin-top: 30px;
+  background-color: #b9b6b6bb;
+  border-top: 1px solid #f6f9f9;
+}
+
+.item {
+  width: 33.333%;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  /* border-left: 1px solid #FFFFFF; */
+}
+
+.item:not(:last-child) {
+  border-right: 1px solid #f6f9f9;
 }
 
 .label {
-  display: flex;
+  display: block;
+  color: #f0f0f0bb;
+  margin-bottom: 8px;
+}
+
+.quantity {
+  color: #ffffff;
+  font-size: 14px;
 }
